# Voila

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  criterion.tar.xz  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build-main.yml  ci.yml  devskim-analysis.yml  format.yml  linux-ci.yml  linux-main.yml  mac-ci.yml  mac-main.yml  windows-ci.yml  windows-main.yml
benches/: benchmark.rs
compiled_voila/: Cargo.toml
compiled_voila/src/: main.rs
src/: cli.rs  error.rs  lexer.rs  lib.rs  macros.rs  main.rs  safety.rs
src/ast/: call.rs  cycle.rs  expr.rs  lookup.rs  mod.rs  script.rs  string.rs  target.rs
src/cli/: mod.rs
src/interpreter/: cache.rs  conditionals.rs  cycles.rs  error.rs  exceptions.rs  functions.rs  interpreter.rs  mod.rs  operators.rs  partial_reader.rs  variables.rs
src/interpreter/conditionals/: conditionals.rs  mod.rs
src/interpreter/cycles/: cycles.rs  mod.rs
src/interpreter/exceptions/: exceptions.rs  mod.rs
src/interpreter/functions/: functions.rs  mod.rs
src/interpreter/operators/: mod.rs  operators.rs
src/interpreter/utils/: bytes.rs  mod.rs  path.rs  regexp.rs  string.rs  sum.rs  time.rs
src/interpreter/variables/: mod.rs  variables.rs
src/interpreter2/: mod.rs
src/lexer/: mod.rs
src/parser/: ast.rs  conditionals.rs  cycles.rs  exceptions.rs  lexer.rs  mod.rs  operations.rs  parser.rs
src/parser/ast/: call.rs  cycle.rs  expr.rs  lookup.rs  mod.rs
src/parser/conditionals/: conditionals.rs  mod.rs
src/parser/cycles/: cycles.rs  mod.rs
src/parser/exceptions/: exceptions.rs  mod.rs
src/parser/operations/: mod.rs  operations.rs
src/parser2/: error.rs  mod.rs  parser.rs
src/parser2/ast/: call.rs  cycle.rs  expr.rs  mod.rs  script.rs  target.rs
voila/: Cargo.toml  build.rs
voila/src/: bytecode.rs  cli.rs  compiler.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  runtime.rs  safety.rs
voila/src/ast/: call.rs  cycle.rs  expr.rs  lookup.rs  script.rs  string.rs  target.rs
voila/src/interpreter/: hash.rs  mod.rs
