cargo-features = ["edition2021"]

[package]
name = "voila"
description = "A tool for doing complex operations to files and directories."
authors = ["Guillem Jara <4lon3ly0@tutanota.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Alonely0/voila/wiki"
homepage = "https://github.com/Alonely0/voila/"
repository = "https://github.com/Alonely0/voila/"
version = "1.4.0"
edition = "2021"
exclude = [
    "ROADMAP.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "target",
    ".*",
]
categories = ["command-line-utilities", "compilers"]
keywords = [
    "files",
    "domain-specific-lang",
    "command-line-utils",
    "compilers",
    "cli",
]

[dependencies]
md5 = "0.7.0"
sha2 = "0.9.5"
sha-1 = "0.9.8"
path-absolutize = "3.0.10"
walkdir = "2.3.2"
regex = "1.5.4"
structopt = "0.3.23"
logos = "0.12.0"
evalexpr = "6.5.0"
async-trait = "0.1.51"
rayon = "1.5.1"
futures = "0.3.16"
fs_extra = "1.2.0"
byte-unit = "4.0.12"
async-stream = "0.3.2"
futures-util = "0.3.16"
futures-core = "0.3.16"
chrono = "0.4.19"
gzp = { version = "0.4.0", features = ["pargz_default"] }
flate2 = "1.0.20"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false