[package]
name = "voila"
description = "A tool for doing complex operations to files and directories."
authors = ["Guillem Jara <4lon3ly0@tutanota.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Alonely0/voila/wiki"
homepage = "https://github.com/Alonely0/voila/"
repository = "https://github.com/Alonely0/voila/"
version = "2.0.1"
edition = "2021"
exclude = [
    "ROADMAP.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "target",
    ".*",
]
categories = ["command-line-utilities", "compilers"]
keywords = [
    "files",
    "domain-specific-lang",
    "command-line-utils",
    "compilers",
    "cli",
]

[dependencies]
md5 = "0.7.0"
sha2 = "0.9.5"
sha-1 = "0.9.7"
walkdir = "2.3.2"
regex = "1.5.4"
structopt = "0.3.23"
logos = "0.12.0"
async-trait = "0.1.51"
rayon = "1.5.1"
ring = "0.16.20"
enum_dispatch = "0.3.7"
threadpool = "1.8.1"
num_cpus = "1.13.0"
fs_extra = "1.2.0"
byte-unit = "4.0.12"
async-stream = "0.3.2"
chrono = "0.4.19"
flate2 = "1.0.21"
tar = "0.4.37"
ansi_term = "0.12.1"
path-absolutize = "3.0.11"

[dev-dependencies]
criterion = "0.3.5"

[lib]
name = "voila"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false
